- poor quality shirt numbers on MacOS
- wrong data in csv player export tool  (bug #42)
- layout changes in transfer history tab
- fired player transfer history in no longer removed on transfer history update
- player data is no longer missing from transfer history top panel  (bug #45)
- wrong link in menu "about HO!"  (bug #43)
- small bugs related to update process on all platforms (bug #57)

Changelist HO! 1.435
====================
[Added]
- macOS version is working again
- statistics tab displays crowd numbers in each stadium section, including percentages
- HatStats statistics are now displayed in Matches module
- flags for Comores, Guam, Sri Lanka, Sao Tomé-et-Principe and Curaçao


[Fixed]
- bug related to the introduction of Support specialty
- bug related to Divine+ ratings in Match Analysis
- a long time bug where IFA tab would crash under certain circumstances of db update
- bug in Misc Tab where some values were not displayed
- bug where FW normal value was displayed in PlayerCompare (TAB Player Analysis)

[Removed]
- Update menu for flags, prediction rating and translation files


Changelist HO! 1.434
====================
- Added check if database folder is writeable
- Removed market value logic (EPV)
- Added new staff structure to miscellaneous tab
- Added new staff assistant level to training tab
- Made sure staff assistant level is visible even if there are no staff at all.
- NThrf should be working again
- Added team name to title bar
- Modified training factors, including base week. Hopefully predictions are improved.

- Changes done related to Style of Play being introduced.
- Max number of orders is dependent on Tactical Assistant level.
- A warning appears if you somehow have more orders than allowed to.	
- Added download and storage of style of play to match orders.
- Caution: style of play is always 0 if you haven't set a new default lineup for the upcoming match.
- Added support in lineup details (right panel).