@@ -613,7 +613,6 @@ Auswaerts_kurz=a
 Heim_kurz=h
 Heim=home
 Gast=away
-Logout_beim_Beenden=Hattrick Logout on exit HO!
 FrageFormelwertReset=Do you want to reset Formula-Data?
 Aktuell=Actual
 AktuelleLiga=Current Division
@@ -748,7 +747,6 @@ tt_Optionen_Defaultsortierung=starting HO! sorts tables by column.
 tt_Optionen_Nachkommastellen=number of right-of-comma position, that should be displayed.
 tt_Optionen_SkillZahlen=showing value behind the skills?
 tt_Optionen_UpdateCheck=check new HO!-version when downloading XML-file.
-tt_Optionen_Logout_beim_Beenden=logoff Hattrick when leaving HO!
 tt_Optionen_Show_SaveHRF_Dialog=showing saving-dialogue by each XML-download.
 tt_Optionen_EinzelneTabellenPositionen=show each possible positions in table
 tt_Download_Start=starting download
@@ -845,10 +843,6 @@ Info=Information
 Winby=Win by
 Lostby=Lost by
 frequency=Probability
-NewsCheck=Check for HO News
-tt_Optionen_NewsCheck=Check for HO News when downloading XML-file.
-UsersCheck=Update HO Users
-tt_Optionen_UsersCheck=Update HO Users when downloading XML-file.
 columns=Columns
 column=Column
 updateDEVavailable=New Development Version available:
@@ -980,7 +974,6 @@ lineup.teamspiritsub=Sub of team spirit
 matches.tabtitle.percentageratings=Percentage ratings
 matches.tabtitle.ratings=Ratings
 options.misc.skin=Skin
-options.tabtitle.check=Check
 windowtitle.xml-export=XML-Export
 windowtitle.exportsuccessful=Export successful
 xmlexport.information={0} matches exported.\n\nRegarding to CHPP-rules:\nAny application that uses this XML-file has to be CHPP approved!
